...
      },
      {
        'name': 'News',
        'keywords': ['news', 'current', 'politics', 'world'],
      },
      {
        'name': 'Technology',
        'keywords': ['tech', 'technology', 'coding', 'software', 'programming'],
      },
      {
        'name': 'Sports',
        'keywords': ['sport', 'sports', 'football', 'basketball', 'soccer'],
      },
...
